@@ -1,3 +1,10 @@
+2009-01-23  Ankit Jain  <radical@gmail.com>
+
+	* src/Application.cs (QuitMainLoop): Rename to ..
+	(Quit): .. this. Move to here from ..
+	(OnQuit): .. here.
+	* src/TargetWindow.cs (WindowDeleted): Call Application.Quit
+
 2009-01-22  Ankit Jain  <radical@gmail.com>
 
 	* src/WindowsPlatformService.cs (ShowMessage):
